--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
           cache: "gradle"
       - name: Build
         run: ./gradlew setupCiWorkspace && ./gradlew build
+      - name: Upload artifact to GH Actions
+        uses: actions/upload-artifact@v2
+        with:
+          name: LiquidBounce
+          path: build/libs
       - name: Upload artifact
         run: |
           cd build/libs
